--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>My First Bitstarter</title>
     <link type="text/css" rel="stylesheet"
           href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-2.3.2.css">
-    <style type="text/css"">
+    <style type="text/css">
       body {
         padding-top: 20px;
         padding-bottom: 40px;
@@ -33,7 +33,7 @@
         height: 40px;
         line-height: 40px;
       }
-div.row {
+      div.row {
         border: 1px solid;
       }
     </style>
@@ -83,7 +83,7 @@ div.row {
         </div>
       </div>
       <div class="row section2">
-        <div clasas="span12">
+        <div class="span12">
           Marketing Section 2
         </div>
       </div>
