Added html framework

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           Video
         </div>
         <div class="span6">
-          <div class="thermometer".
+          <div class="thermometer">
             Thermometer
           </div>
           <div class="order">
@@ -79,7 +79,7 @@
       </div>
       <div class="row section1">
         <div class="span12">
-          Marketing Section1
+          Marketing Section 1
         </div>
       </div>
       <div class="row section2">
