Changed theme in index.html

--- a/index.html
+++ b/index.html
@@ -133,14 +133,14 @@
       <!-- www.google.com/fonts/specimen/Ubuntu#pairings -->
       <div class="row-fluid heading">
         <div class="span12">
-          <h1>Jazz Club</h1>
+          <h1>Thyroid Toolkit</h1>
         </div>
       </div> 
       <div class="row-fluid subheading">
         <div class="span12">
           <!-- Special typography from Bootstrap for lead paragraph. -->
           <!-- http://twitter.github.io/bootstrap/base-css.html#typography -->
-          <p class="lead">Where live jazz happens.</p>
+          <p class="lead">Self-Care is the true healthcare.</p>
         </div>
       </div>
       <div class="row-fluid pitch">
@@ -204,12 +204,11 @@
         </div>
         <div class="span5 copy">
           <p>
-            Jazz Club is a place to go online where you can experience 
-            live jazz music via streaming from jazz clubs from around the 
-            world. This website will contain the latest jazz news, upcoming
-            events, a calendar with the upcoming live jazz club streams, a 
-            list of the available live streams, as well as a place to talk
-            with others about the jazz scene.    
+            Thyroid Toolkit is a website that provides a comprehensive set of
+            tools that can help with thyroid issue detection, management of 
+            symptoms and medication, and identifying causes of thyroid hormone
+            resistance. It also provides critical information so that one can
+            help manage their own thyroid healthcare. 
           </p>
         </div>
       </div>
@@ -217,11 +216,10 @@
       <div class="row-fluid section2">
         <div class="span5 offset1 copy copy-right">
           <p>
-            Our business formula includes the participation of reputable
-            jazz clubs from all over the world that have live streaming
-            to offer, jazz musicians who want to listen and/or promote 
-            their concerts and CDs, and people who simply want to listen, 
-            blog, and hang out.
+            Our business formula is to collaborate with the new technologies
+            that help people take charge of their own healthcare. There will
+            be an option to sign up and have lab results and vitals tracked
+            to provide ongoing charts and recommendations for better care.
           </p>
         </div>
         <div class="span5 asset">
